--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ p {
     font-weight: 400;
     font-size: 18px;
     line-height: 33px;
-    letter-spacing: .5px;
+    letter-spacing: 0.5px;
     color: #4B505A;
     width: 493px;
     height: 99px;
